# codar-sounder

./: .gitignore  CLAUDE.md  README.md  deploy.toml  pyproject.toml
config/: codar-sounder-config.toml.template  help.toml
data/: codar-stations.toml
docs/: REQUIREMENTS.md
etc/: radiod-fragment.conf
scripts/: config-wizard.sh  deploy.sh  install.sh  multihop_diagnostic.py
src/codar_sounder/: __init__.py  cli.py  config.py  configurator.py  contract.py  sigmond_tui.py  tdma_config_writer.py
src/codar_sounder/core/: daemon.py  dechirp.py  invert.py  output.py  stations.py  stream.py  tdma.py  trace.py
systemd/: codar-sounder@.service
tasks/: todo.md
tasks/analysis/: 2026-05-21_f2_extreme_multihop_diagnostic.md
tests/: test_config_roundtrip.py  test_contract.py  test_dechirp.py  test_invert.py  test_kaeppler_zenodo.py  test_lifetime.py  test_multi_peak.py  test_scintillation.py  test_stations.py  test_tdma.py  test_tdma_config_writer.py  test_trace.py
tests/fixtures/: test-config.toml
