[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codar-sounder"
version = "0.1.0"
description = "Opportunistic ionospheric sounder using CODAR FMCW chirp transmissions"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Michael Hauan", email = "mjh@hauan.org"},
]
dependencies = [
    "ka9q-python>=3.8.0",
    "numpy>=1.24.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
codar-sounder = "codar_sounder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codar_sounder = ["../data/codar-stations.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
