[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codar-sounder"
version = "0.6.3"
description = "Opportunistic ionospheric sounder using CODAR FMCW chirp transmissions"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Michael Hauan", email = "mjh@hauan.org"},
]
dependencies = [
    # ka9q-python ≥3.11 added low_edge / high_edge kwargs to ensure_channel,
    # which RadiodIQSource needs for the wideband CODAR chirp (see
    # core/stream.py).  Earlier versions silently apply the iq preset's
    # ±5 kHz audio filter, truncating the chirp's edges.
    # ≥3.14 adds RadiodControl(client_id=) for per-(client, radiod)
    # multicast destination derivation (CONTRACT v0.3 §7).
    "ka9q-python>=3.14.0",
    "numpy>=1.24.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
codar-sounder = "codar_sounder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codar_sounder = ["../data/codar-stations.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
