[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codar-sounder"
version = "0.7.0"
description = "Opportunistic ionospheric sounder using CODAR FMCW chirp transmissions"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Michael Hauan", email = "mjh@hauan.org"},
]
dependencies = [
    # ka9q-python ≥3.11 added low_edge / high_edge kwargs to ensure_channel,
    # which RadiodIQSource needs for the wideband CODAR chirp (see
    # core/stream.py).  Earlier versions silently apply the iq preset's
    # ±5 kHz audio filter, truncating the chirp's edges.
    # ≥3.14 adds RadiodControl(client_id=) for per-(client, radiod)
    # multicast destination derivation (CONTRACT v0.3 §7).
    "ka9q-python>=3.14.0",
    "numpy>=1.24.0",
    "tomli>=2.0; python_version < '3.11'",
    # Shared suite DSP/geometry library — codar consumes the geodesic
    # great-circle / bearing helpers (WGS-84 via geographiclib) so every
    # client computes TX-RX geometry identically.  Local-only sibling
    # (not yet on PyPI); resolved editable via [tool.uv.sources] below.
    "hamsci-dsp>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
codar-sounder = "codar_sounder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codar_sounder = ["../data/codar-stations.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
# editable=true so a `git pull` of ka9q-python propagates to this consumer's
# venv without a reinstall.  Matches the suite-wide "one source tree, many
# editable consumers" convention; see sigmond/CLAUDE.md "Fleet upgrade pattern".
# Without this declaration, uv sync would resolve ka9q-python>=3.14.0 from
# PyPI and replace the existing editable install with a wheel.  The base
# "ka9q-python>=3.14.0" dependency above still controls what PyPI consumers get.
ka9q-python = { path = "../ka9q-python", editable = true }
hamsci-dsp = { path = "../hamsci-dsp", editable = true }
